Add swagger models
