# quizmous_api/api/swagger/models/question_type.py
@@ -1,0 +1,45 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from .base_model_ import Model
+from .. import util
+
+
+class QuestionType(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    """
+    allowed enum values
+    """
+    YES_NO = "yes_no"
+    RADIO = "radio"
+    CHOICE = "choice"
+    OPEN = "open"
+
+    def __init__(self):  # noqa: E501
+        """QuestionType - a model defined in Swagger
+
+        """
+        self.swagger_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'QuestionType':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The QuestionType of this QuestionType.  # noqa: E501
+        :rtype: QuestionType
+        """
+        return util.deserialize_model(dikt, cls)
